2018-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* "to"-conversion for physical constants

2018-04-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calculate each vector element (and each extra argument) separately in many functions
	  (e.g. sin(5, 2, 3) = [-0.95892427, 0.90929743, 0.14112001])

2018-04-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Only remove quotation marks at beginning and end of command line expression if they are the only ones

2018-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Direct date and time calculation
	* Return date and time in stamptodate()
	* Time zone conversion

2018-04-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use local currency as "optimal" currency unit

2018-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow user to change decimal separator (and consequently argument separator)
	* Fix lambertw()

2018-03-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix display of parsed sexagesimal number
	* Do not remove spaces within quotation marks

2018-02-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Change how percent (and permille, permyriad) addition and subtract is calculated (100+20%=120)

2018-03-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow ParseOptions::comma_as_separator to have effect on unlocalizeExpression() and localizeExpression() 
	  even if Calculator::useDecimalPoint(true) has not been called.

2018-03-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix complex atan()
	* Derivative of arg()
	* ln(x^a)=ln(x)*a if 1>a>-1 and a!=0

2018-03-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segmentation fault when calculating arg(-x)

2018-03-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Derivative of gamma(), besselj(), heaviside(), Ci(), Si(), Shi(), Chi(), Ei(), Li(), li(), erf(), erfc(), sinc(),
	  factorial and comparisons, and use dirac() for derative of sgn().
	* Complete the square when factorizing
