@@ -1,3 +1,7 @@
+2018-04-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix segfault when prefix is set in some cases
+
 2018-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* "to"-conversion for physical constants
